# gTAA-example

./: README.md  pyproject.toml
src/adapters/api/http/: rest_http_client.py
src/adapters/api/http/common/: entities.py  interface.py
src/adapters/http/rest/: rest_http_client.py
src/adapters/http/rest/common/: interface.py
src/generic/clients/api/common/: base_body.py
src/generic/clients/api/http/auth/: client.py
src/generic/clients/api/http/auth/models/: sign_up_models.py
src/generic/setup/: config.py
src/generic/steps/: auth_steps.py
src/tests/: conftest.py
src/tests/api/auth/: register_user_test.py
